--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   math_expressions: ^2.1.0
+  font_awesome_flutter: ^9.0.0
 
 
   cupertino_icons: ^1.0.2
